--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,7 @@
 name = "genshin-search-bot"
-type = 'webpack'
+type = 'javascript'
 account_id = '542c3117425ad0a06405efa960e52339'
 workers_dev = true
-webpack_config = "webpack.config.js"
 
 [vars]
 DISCORD_APPLICATION_ID = "861184372231897149"
@@ -14,7 +13,11 @@ preview_id = "948fd6d2c37d47b193f4e6461c3417d3"
 
 [env.staging]
 name = "genshin-serach-bot-command"
-webpack_config = "webpack.command.js"
 
 [dev]
 port = 3000
+
+[build]
+command = "npm run build"
+[build.upload]
+format = "service-worker"
