--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,19 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: data-update
 
-name: deploy
-
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab or through HTTP API
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   deploy:
-    name: 'Deploy Bot'
+    name: 'Database Update'
     runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
@@ -30,6 +24,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Downlaod Data
+      id: download
       uses: dsaltares/fetch-gh-release-asset@master
       with:
         repo: "Ariette/genshin-data-parse"
@@ -43,7 +38,22 @@ jobs:
         tar -zxf release.tar.gz
         mv -f output/* data/
 
-    - name: Deploy
+    - name: Build data
       run: |
         npm ci
-        npm run deploy
+        npm run build
+
+    - name: Deploy Data
+      uses: cloudflare/wrangler-action@1.3.0
+      with:
+        apiToken: ${{ secrets.CF_API_TOKEN }}
+        publish: false
+        preCommands: npm run upload
+
+    - name: Commit Updates
+      run: |
+        git add .
+        git config --global user.name 'Git bot'
+        git config --global user.email 'bot@noreply.github.com'
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        git commit -m "${{ steps.download.outputs.name }}" && git push || echo "No changes to commit" && exit 0
