--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -58,4 +58,4 @@ jobs:
         git config --global user.name 'Git bot'
         git config --global user.email 'bot@noreply.github.com'
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git commit -m "${{ steps.download.outputs.name }}" && git push || echo "No changes to commit" && exit 0
+        git commit -m "${{ steps.download.outputs.name }}" && git push || exit 1
