리팩토링 + 호요랩 API 관련 기능 추가

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,11 @@ binding = "DB"
 id = "948fd6d2c37d47b193f4e6461c3417d3"
 preview_id = "948fd6d2c37d47b193f4e6461c3417d3"
 
+[[kv_namespaces]]
+binding = "Cookie"
+id = "08b0f0b7eb394f2ca1e3454ae7af8532"
+preview_id = "08b0f0b7eb394f2ca1e3454ae7af8532"
+
 [dev]
 port = 3000
 
@@ -15,3 +20,6 @@ port = 3000
 command = "npm run build"
 [build.upload]
 format = "service-worker"
+
+[miniflare]
+kv_persist = "./kv/"
