--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "디스코드 원신 서치봇",
   "main": "./dist/worker.js",
   "scripts": {
-    "start": "wrangler preview",
-    "dev": "wrangler preview --watch",
+    "start": "NODE_ENV=development miniflare ./dist/worker.js --watch --debug --binding DISCORD_PUBLIC_KEY=$DISCORD_PUBLIC_KEY",
     "deploy": "wrangler publish && node ./src/upload.js",
     "build": "node ./esbuild.config.js",
     "prebuild": "node ./src/prebuild.js",
@@ -20,12 +19,18 @@
   "author": "Ariette",
   "license": "MIT",
   "dependencies": {
-    "discord-interactions": "^2.4.1",
-    "table": "^6.7.3"
+    "cookie": "^0.4.2",
+    "discord-interactions": "^3.0.0",
+    "table": "^6.8.0"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.19.5",
-    "esbuild": "^0.13.13",
-    "shelljs": "^0.8.4"
+    "@cloudflare/wrangler": "^1.19.9",
+    "@types/cookie": "^0.4.1",
+    "discord-api-types": "^0.29.0",
+    "esbuild": "^0.14.27",
+    "esbuild-node-externals": "^1.4.1",
+    "miniflare": "^2.3.0",
+    "shelljs": "^0.8.5",
+    "typescript": "^4.6.2"
   }
 }
