--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
   "dependencies": {
     "cookie": "^0.5.0",
     "discord-interactions": "^3.2.0",
-    "table": "^6.8.0"
+    "genshin-db": "^4.3.4",
+    "table": "^6.8.1"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.19.12",
+    "@cloudflare/wrangler": "^1.20.0",
     "@types/cookie": "^0.5.1",
-    "discord-api-types": "^0.33.1",
+    "discord-api-types": "^0.37.21",
     "esbuild": "^0.14.42",
-    "esbuild-node-externals": "^1.4.1",
-    "miniflare": "^2.5.0",
-    "npm-check-updates": "^13.0.3",
+    "esbuild-node-externals": "^1.5.0",
+    "miniflare": "^2.11.0",
+    "npm-check-updates": "^16.5.6",
     "shelljs": "^0.8.5",
-    "typescript": "^4.7.2"
+    "typescript": "^4.9.4"
   }
 }
