--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   "license": "MIT",
   "dependencies": {
     "cookie": "^0.5.0",
-    "discord-interactions": "^3.2.0",
-    "genshin-db": "^4.3.4",
+    "discord-api-types": "^0.37.35",
+    "discord-interactions": "^3.3.0",
+    "genshin-db": "^4.3.6",
     "table": "^6.8.1"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.20.0",
     "@types/cookie": "^0.5.1",
-    "discord-api-types": "^0.37.21",
-    "esbuild": "^0.14.42",
-    "esbuild-node-externals": "^1.5.0",
-    "miniflare": "^2.11.0",
-    "npm-check-updates": "^16.5.6",
+    "esbuild": "^0.17.10",
+    "esbuild-node-externals": "^1.6.0",
+    "miniflare": "^2.12.1",
+    "npm-check-updates": "^16.7.10",
     "shelljs": "^0.8.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5",
+    "wrangler": "^2.12.0"
   }
 }
