--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,47 +15,47 @@ jobs:
         shell: bash
 
     steps:
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Downlaod Data
-      id: download
-      uses: dsaltares/fetch-gh-release-asset@master
-      with:
-        repo: "Ariette/genshin-data-parse"
-        token: ${{ secrets.GITHUB_TOKEN }}
-        file: "release.tar.gz"
-        target: "src/release.tar.gz"
+      - name: Downlaod Data
+        id: download
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          repo: 'Ariette/genshin-data-parse'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          file: 'release.tar.gz'
+          target: 'src/release.tar.gz'
 
-    - name: Extract Data
-      working-directory: src
-      run: |
-        tar -zxf release.tar.gz
-        mv -f output/* data/
+      - name: Extract Data
+        working-directory: src
+        run: |
+          tar -zxf release.tar.gz
+          mv -f output/* data/
 
-    - name: Build data
-      run: |
-        npm ci
-        npm run build
+      - name: Build data
+        run: |
+          npm ci
+          npm run build
 
-    - name: Deploy Data
-      uses: cloudflare/wrangler-action@1.3.0
-      with:
-        apiToken: ${{ secrets.CF_API_TOKEN }}
-        publish: false
-        preCommands: npm run upload
+      - name: Deploy Data
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          publish: false
+          preCommands: npm run upload
 
-    - name: Commit Updates
-      run: |
-        git add .
-        git config --global user.name 'Git bot'
-        git config --global user.email 'bot@noreply.github.com'
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git commit -m "${{ steps.download.outputs.name }}" && git push || exit 1
+      - name: Commit Updates
+        run: |
+          git add .
+          git config --global user.name 'Git bot'
+          git config --global user.email 'bot@noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git commit -m "${{ steps.download.outputs.name }}" && git push || exit 1
