--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -49,6 +49,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
           preCommands: npm run upload
           command: whoami
 
