migrate to wrangler v3

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -46,10 +46,9 @@ jobs:
           npm run build
 
       - name: Deploy Data
-        uses: cloudflare/wrangler-action@2.0.0
+        uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           preCommands: npm run upload
           command: whoami
 
