--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "genshin-search-bot"
 workers_dev = true
-compatibility_date = "2021-11-12"
+compatibility_date = "2023-12-01"
+main = "src/index.ts"
 
 [[kv_namespaces]]
 binding = "DB"
@@ -11,10 +12,4 @@ binding = "Cookie"
 id = "08b0f0b7eb394f2ca1e3454ae7af8532"
 
 [dev]
-port = 3000
-
-[build]
-command = "npm run build"
-
-[miniflare]
-kv_persist = "./kv/"
+port = 8787
